fix release notes alignment

--- a/_static/morpheusTheme.css
+++ b/_static/morpheusTheme.css
@@ -456,6 +456,12 @@ h2 {
   }
 }
 
+html.writer-html5 .rst-content dl.field-list>dt, html.writer-html5 .rst-content dl.footnote>dt {
+    padding-left: 1rem;
+    margin: 0px;
+    padding: 0px;
+}
+
 .rst-content dl:not(.docutils) dt {
   display: table;
   margin: 6px 0;
